[gd_scene load_steps=56 format=2]

[ext_resource path="res://Scenes/SceneList/Menu Scenes/CoverScene/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Scripts/Heroes/BraveGirl.gd" type="Script" id=2]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (3).png" type="Texture" id=3]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (8).png" type="Texture" id=4]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (7).png" type="Texture" id=5]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Shoot/Shoot (1).png" type="Texture" id=6]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Shoot/Shoot (2).png" type="Texture" id=7]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (2).png" type="Texture" id=8]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (9).png" type="Texture" id=9]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (4).png" type="Texture" id=10]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (10).png" type="Texture" id=11]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Shoot/Shoot (3).png" type="Texture" id=12]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (1).png" type="Texture" id=13]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (2).png" type="Texture" id=14]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (1).png" type="Texture" id=15]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (5).png" type="Texture" id=16]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Dead/Dead (6).png" type="Texture" id=17]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (3).png" type="Texture" id=18]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (6).png" type="Texture" id=19]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (9).png" type="Texture" id=20]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (8).png" type="Texture" id=21]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (3).png" type="Texture" id=22]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (4).png" type="Texture" id=23]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (4).png" type="Texture" id=24]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (7).png" type="Texture" id=25]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (1).png" type="Texture" id=26]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (5).png" type="Texture" id=27]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (10).png" type="Texture" id=28]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Run/Run (8).png" type="Texture" id=29]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (7).png" type="Texture" id=30]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (6).png" type="Texture" id=31]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (2).png" type="Texture" id=32]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Jump/Jump (5).png" type="Texture" id=33]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Idle/Idle (2).png" type="Texture" id=34]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Idle/Idle (3).png" type="Texture" id=35]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Idle/Idle (1).png" type="Texture" id=36]
[ext_resource path="res://Assets/NPC characters/CowBoyGirl/Idle/Idle (4).png" type="Texture" id=37]
[ext_resource path="res://Assets/Attacks/audio/ShootEnemy.wav" type="AudioStream" id=38]
[ext_resource path="res://Scenes/SceneList/AttackScenes/BulletAttacks/FireBullet.tscn" type="PackedScene" id=39]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/Information/InformationCanvas.tscn" type="PackedScene" id=40]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/Popup/PopupMenu.tscn" type="PackedScene" id=41]
[ext_resource path="res://Scenes/SceneList/ItemsScenes/ProgressBar/ProgressBar.tscn" type="PackedScene" id=42]
[ext_resource path="res://Scenes/SceneList/MiscScenes/VirtualJoystickScene.tscn" type="PackedScene" id=43]
[ext_resource path="res://Assets/HealthAndEnergy/BlueEnergyBall.png" type="Texture" id=44]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/Information/PlayerSpeechArea.tscn" type="PackedScene" id=45]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/Popup/StoryAndObjectivePopup.tscn" type="PackedScene" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 37 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 32 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 28 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 29 ) ],
"loop": true,
"name": "RunRight",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.5714, 60.4625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.4332, 17.1062 )

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BraveGirl:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BraveGirl:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerAnimation:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BraveGirl:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GunShot:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 38 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GunShot:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("BraveGirl:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BraveGirl:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BraveGirl:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BraveGirl:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BraveGirl:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("BraveGirl:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BraveGirl:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BraveGirl:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunLeft"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("BraveGirl:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BraveGirl:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BraveGirl:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "RunRight" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BraveGirl:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("BraveGirl:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerAnimation:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BraveGirl:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "RunRight" ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Hero",
"Save",
]]
collision_mask = 16
script = ExtResource( 2 )
RangedAttackType1 = ExtResource( 39 )

[node name="BraveGirl" type="AnimatedSprite" parent="."]
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
animation = "Attack"
frame = 2
speed_scale = 0.5
flip_h = true

[node name="WeakAreaCollision" type="CollisionShape2D" parent="."]
position = Vector2( -9, 8.00002 )
shape = SubResource( 2 )

[node name="StompingArea" type="Area2D" parent="."]

[node name="StompAttackArea" type="CollisionShape2D" parent="StompingArea"]
position = Vector2( -10.1797, 53.5945 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 3400
limit_bottom = 1100
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_right = 0.0
__meta__ = {
"_editor_description_": "	"
}

[node name="GunShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 38 )
volume_db = 5.0

[node name="informationLayer" type="CanvasLayer" parent="."]

[node name="InfoNode" parent="informationLayer" instance=ExtResource( 40 )]

[node name="AttackcooldownTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
autoplay = "Attack"
playback_speed = 2.0
anims/Attack = SubResource( 4 )
anims/Dead = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Jump = SubResource( 7 )
anims/RunLeft = SubResource( 8 )
anims/RunRight = SubResource( 9 )

[node name="FadeIn" parent="." instance=ExtResource( 1 )]

[node name="ProgressBar" parent="." instance=ExtResource( 42 )]
position = Vector2( -35.7995, -74.4629 )
scale = Vector2( 0.149685, 0.115241 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupMenuControl" parent="CanvasLayer" instance=ExtResource( 41 )]
margin_left = -7.48259
margin_top = -0.437233
margin_right = -7.48254
margin_bottom = -0.437256
rect_pivot_offset = Vector2( 250, 250 )

[node name="StoryAndObjectivePopup" parent="CanvasLayer" instance=ExtResource( 46 )]
position = Vector2( 19.2543, -41.8306 )

[node name="ProtectionTimer" type="Timer" parent="."]

[node name="ProtectionGlobe" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( -6.78304, 1.50735 )
scale = Vector2( 1.39938, 1.51767 )
texture = ExtResource( 44 )

[node name="Controllers" parent="." instance=ExtResource( 43 )]

[node name="PlayerSpeechArea" parent="." instance=ExtResource( 45 )]
position = Vector2( -3.896, -101.297 )
z_index = 1
[connection signal="animation_finished" from="BraveGirl" to="." method="_on_BoyAnimation_animation_finished"]
[connection signal="area_entered" from="StompingArea" to="." method="_on_StompingArea_area_entered"]
[connection signal="timeout" from="AttackcooldownTimer" to="." method="_on_AttackcooldownTimer_timeout"]
[connection signal="animation_finished" from="PlayerAnimation" to="." method="_on_PlayerAnimation_animation_finished"]
[connection signal="animation_started" from="PlayerAnimation" to="." method="_on_PlayerAnimation_animation_started"]
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
[connection signal="pressed" from="CanvasLayer/StoryAndObjectivePopup/PopupPanel/VBoxContainer/CenterContainer/NextButtonPopup" to="." method="_on_NextButtonPopup_pressed"]
[connection signal="timeout" from="ProtectionTimer" to="." method="_on_ProtectionTimer_timeout"]

[editable path="FadeIn"]

[editable path="CanvasLayer/StoryAndObjectivePopup"]
